Fixes alignment of icons in dropdowns
[ #94737680 ] Fixes the icon appearing above the words in the admin
menu and elsewhere

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -232,6 +232,8 @@ a { color: $green;
 
 .icon-logo { font-family: 'BrandIcons'; display: inline-block; }
 
+.dropdown-menu > li > a, .dropdown-menu > li > a > .glyphicon { display: inline-block; }
+
 .dropdown-menu-right li a .icon-logo { display: inline-block; }
 
 .icon-twitter:before { content: "\F303"; }
